# rust_rpg

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  config.json  pipeline.yml  readme.md
.github/workflows/: pipeline.yml
design/: book.toml
design/src/: README.md  SUMMARY.md  devsys.md  dungeons.md  e_components.md  feature_template.md  features.md  fishing.md  herbalism.md  maptileentities.md  mining.md  targetsys.md  technical.md  tileanims.md
design/templates/: feature_template.md
raws/: animations.json5  audio.json5  beings.json  items.json  noise.json5  recipes.json  skills.json  world_objs.json  world_objs.json5
resources/aseprite/: blood.aseprite  game_tiles.aseprite  interactable_tiles.aseprite  main_menu_mockup.aseprite  terminal8x8.aseprite  terrain_forest.aseprite  terrain_town_forest.aseprite  ui_prototype.aseprite
resources/ldtk/: prefabs.ldtk  rpg_world_v1.ldtk  rpg_world_v2.ldtk  starter
resources/rex/: map_bar.xp  nerhonde.xp  ui.xp  ui_mock.xp
src/: activity_finishing.rs  audio.rs  being.rs  camera.rs  char_c.rs  colors.rs  combat.rs  components.rs  config.rs  crafting.rs  debug.rs  draw_sprites.rs  drawsprites.rs  droptables.rs  equipment.rs  fishing.rs  fov.rs  frame_animation.rs  game_init.rs  indexing.rs  inventory.rs  items.rs  logger.rs  main.rs  map.rs  message_log.rs  mining.rs  monster.rs  noise.rs  player.rs  saveload.rs  saveload_menu.rs  settings.rs  stats.rs  storage_utils.rs  tile_animation.rs  time.rs  user_interface.rs  z_order.rs
src/data_read/: animations.rs  audio.rs  beings.rs  items.rs  levels.rs  mod.rs  noise.rs  prefab.rs  recipes.rs  world_objs.rs
src/map_gen/: gameworld.rs  mod.rs
src/ui/: drawing.rs  fishing.rs  inventory.rs  main_menu.rs  message_log.rs  mod.rs  save_menu.rs  use_menu.rs
