[package]
name = "rust_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-terminal = "0.8.7"
bracket-rex = "0.8.7"
bracket-random = "0.8.7"
specs = {version = "0.19.0", features = ["specs-derive"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
ldtk_map = { path = "../ldtk_map/"}
lazy_static = "1.4.0"
pathfinding = "4.3.1"
