[package]
name = "rust_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldtk_map = { path = "../ldtk_map/"}

bracket-terminal = "0.8.7"
bracket-rex = "0.8.7"
bracket-random = "0.8.7"
bracket-color = { version = "0.8.7", features = ["serde"] }
bracket-geometry = { version = "0.8.7", features = ["serde"] }

specs = {version = "0.20.0", features = ["specs-derive", "serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4.1" 

lazy_static = "1.4.0"
pathfinding = "4.3.1"
itertools = "0.12.0"
log = "0.4.20"
simplelog = "0.12.1"
weighted_rand = "0.4.2"
uuid = { version = "1.6.1", features = [ "v4"] }
