[package]
name = "rust_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldtk_map = { git = "https://github.com/benlloyd50/ldtk_map" }
bracket-lib = { version = "0.8.7", features = ["serde", "specs"] }

specs = { version = "0.20.0", features = ["specs-derive", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4.1"

kira = "0.10.2"
lazy_static = "1.4.0"
pathfinding = "4.3.1"
itertools = "0.12.0"
log = "0.4.20"
simplelog = "0.12.1"
weighted_rand = "0.4.2"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.39"
